cm4all-workshop (6.0.21) unstable; urgency=low

  * cron: on timeout, log "Timeout" in cronresults instead of "Canceled"
  * cron: implement control command TERMINATE_CHILDREN
  * control: switch to the beng-proxy control protocol
  * control: accept VERBOSE, DISABLE_QUEUE, ENABLE_QUEUE only from local clients
  * systemd: depend on "cm4all-spawn-accessory.socket", not ".service"

 --   

cm4all-workshop (6.0.20) unstable; urgency=low

  * systemd: keep CAP_CHOWN/CAP_FSETID (needed for `cgroups_writable_by_gid`)
  * systemd: add "Wants=cm4all-spawn-reaper.service"
  * systemd: add "After=cm4all-spawn-accessory.service" 
  * debian: adjust dependencies to splitted "cm4all-spawn" packages

 -- Max Kellermann <mk@cm4all.com>  Mon, 04 Dec 2023 15:26:54 +0100

cm4all-workshop (6.0.19) unstable; urgency=low

  * fix exit status/signal reporting
  * spawn: add setting `cgroups_writable_by_gid`

 -- Max Kellermann <mk@cm4all.com>  Fri, 01 Dec 2023 17:36:25 +0100

cm4all-workshop (6.0.18) unstable; urgency=low

  * translation: add packet MAPPED_UID_GID

 -- Max Kellermann <mk@cm4all.com>  Thu, 16 Nov 2023 15:24:49 +0100

cm4all-workshop (6.0.17) unstable; urgency=low

  * translation: time out after 30 seconds
  * spawn: do not ignore SIGTERM in spawned processes
  * make libcap, libseccomp, libsystemd optional

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Nov 2023 22:59:52 +0100

cm4all-workshop (6.0.16) unstable; urgency=low

  * spawn: don't follow symlinks for BIND_MOUNT

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Oct 2023 09:18:59 +0200

cm4all-workshop (6.0.15) unstable; urgency=low

  * spawn: create dummy process to hold the systemd scope
  * translation: allow dots in CGROUP_SET

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 09:57:17 +0200

cm4all-workshop (6.0.14) unstable; urgency=low

  * add workaround for running in unprivileged containers
  * systemd: add AssertKernelVersion>=5.12

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Aug 2023 20:15:26 +0200
